<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.astuetz.PagerSlidingTabStrip
            android:id="@+id/tabsMovies"
            style="@style/TabStrip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_strip_height" />

        <android.support.v4.view.ViewPager
            android:id="@+id/pagerMovies"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <include layout="@layout/drawer_left" />

</android.support.v4.widget.DrawerLayout>