...
    <string name="season_number">Season %d</string>
    <string name="specialseason">Special Episodes</string>
    <string name="ratings">Ratings</string>
    <string name="more_information">More information</string>

    <!-- Descriptions -->
    <string name="navigate_up">Navigate up</string>
    <string name="description_overview">Overview</string>
    <string name="description_poster">Show poster</string>
    <string name="description_image">Episode image</string>
    <string name="description_menu_overflow">More options</string>

    <!-- Actions -->
    <string name="clear">Clear</string>
    <string name="discard">Discard</string>
    <string name="action_display_all">Show all</string>
    <string name="web_search">Web search</string>
...
    <string name="state_favorite">Favorite</string>

    <!-- Shows -->
    <string name="title_shows_added">Added</string>
    <string name="confirm_delete">Delete %s?</string>
    <string name="delete_error">Could not delete show. Try again later.</string>
    <string name="delete_show">Delete</string>
    <string name="no_nextepisode">no next episode found</string>
    <string name="context_favorite">Add to favorites</string>
    <string name="context_unfavorite">Remove from favorites</string>
    <string name="favorited">Added to favorites</string>
    <string name="unfavorited">Removed from favorites</string>
    <string name="action_episode_notifications_on">Turn on episode notifications</string>
    <string name="action_episode_notifications_off">Turn off episode notifications</string>
    <string name="context_hide">Hide</string>
    <string name="context_unhide">Do not hide</string>
    <string name="hidden">Moved to hidden</string>
    <string name="unhidden">Show is visible again</string>
    <string name="action_shows_add">Add show</string>
    <string name="action_filter_and_sort">Filter and sort</string>
    <string name="title_filter_general">General</string>
    <string name="empty_filter">Reset filters</string>
    <string name="action_shows_filter_favorites">Favorites</string>
    <string name="action_shows_filter_unwatched">Unwatched</string>
    <string name="action_shows_filter_upcoming">Upcoming</string>
...
