<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sgToolbar"
    style="@style/Widget.SeriesGuide.ActionBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    android:theme="?attr/actionBarTheme"
...
        android:id="@+id/containerSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <AutoCompleteTextView
            android:id="@+id/editTextSearchBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:minWidth="250dp"
            android:paddingRight="44dp"
            app:layout_constraintStart_toStartOf="parent"
...
